feat: complete Emergent Builder Challenge backend MVP